@@ -2,6 +2,7 @@ Cacti CHANGELOG
 
 0.8.7
 -bug#0000480: error when making a change to graphs displayed per page
+-bug#0000740: Lack of unique session name conflicts with other PHP apps
 -bug#0000829: JVM, Spike detection and Poller
 -bug#0000833: favicon.ico support
 -bug#0000850: Select All for list view
